# zope.dottedname

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  pyproject.toml  resolve.py  resolve.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  api.rst  conf.py  hacking.rst  index.rst  make.bat  narrative.rst
src/zope/dottedname/: README.txt  resolve.py  tests.py
